# news-trend-analyzer

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
airflow/dags/: news_pipeline.py
dashboard/: app.py
data/processed/: analyzed_news.csv
data/raw/: raw_articles.csv
db_backups/: backup_$(date
docker/: docker-compose.yml  dockerfile.txt
src/ingestion/: fetch_news.py
src/processing/: clean_and_sentiment.py
src/storage/: db.py  init_db.py
