[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-trend-analyzer"
version = "0.1.0"
description = "A project to analyze news trends"
dependencies = [
    "python-dateutil",
    "feedparser",
    "psycopg2-binary",
    "textblob",
    "streamlit",
    "pandas",
    "sqlalchemy>=1.4.36, <2.0",
    "streamlit-autorefresh",
    "apache-airflow[postgres]==2.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]